HW2 - Basic Menu/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu
-d
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java
<---- end of javadoc command ---->
Loading source file C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java...
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:45: error: illegal start of expression
    public static void conversionRates() {
    ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:45: error: illegal start of expression
    public static void conversionRates() {
           ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:45: error: ';' expected
    public static void conversionRates() {
                 ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:45: error: ';' expected
    public static void conversionRates() {
                                        ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:48: error: illegal start of expression
    public static void staticalAnalysis() {
    ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:48: error: illegal start of expression
    public static void staticalAnalysis() {
           ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:48: error: ';' expected
    public static void staticalAnalysis() {
                 ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:48: error: ';' expected
    public static void staticalAnalysis() {
                                         ^
C:\Users\khaba\OneDrive\School\CSS 161\Assignments\Basic Menu\KhabazanBehnam.java:50: error: reached end of file while parsing
}
 ^
9 errors
